# Icury_project_solana

./: Anchor.toml  README.md  my-keypair.json
programs/create_icury_token/: Cargo.toml
programs/create_icury_token/src/: associated_token.rs  lib.rs  mint.rs  token.rs
tests/: create_icury_token.ts
